--- a/python/tutorials/ml-introduction/2/solution-1/solution-1.ipynb
+++ b/python/tutorials/ml-introduction/2/solution-1/solution-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,22 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_accuracy(train_data, test_data, ):\n",
+    "def count_accuracy(train_data, test_data):\n",
     "    scores = []\n",
     "    for idx in range(1, MAX_N_COUNT+1):\n",
-    "        knn = KNeighborsClassifier(n_neighbors=idx)\n",
-    "        score_by_idx = cross_val_score(knn, train_data, test_data, cv=kf, scoring='accuracy')\n",
+    "        knn_model = KNeighborsClassifier(n_neighbors=idx)\n",
+    "        score_by_idx = cross_val_score(knn_model, train_data, test_data, cv=kf, scoring='accuracy')\n",
     "        scores.append(round(score_by_idx.mean(), 2))\n",
     "    return scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -139,13 +139,6 @@
     "print(scores)\n",
     "print(max_index_arr + 1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -169,12 +162,12 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
     "source": [
      "\n"
-    ]
+    ],
+    "metadata": {
+     "collapsed": false
+    }
    }
   }
  },
